# macchiato

./: .gitmodules  CMakeLists.txt
include/macchiato/objects/: object_color.hpp
